# instapy

./: README.md  pyproject.toml
instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing-report.txt  timing.py
test/: test_numba.py  test_numpy.py  test_python.py
